# cortana-vision

./: .env.example  .gitignore  DB_reset.md  Dockerfile  EFFICIENCY_REPORT.md  Improvemen.md  README.md  docker-compose.yml  docker.md  env.example  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: README.md  api-gateway.yml  cortana_common.yml  reusable-python-mypy.yml  reusable-python-ruff.yml  reusable-python-service.yml  reusable-python-tests.yml  s3-cron-scanner.yml
api-gateway-service/: .gitignore  README.md  pyproject.toml
api-gateway-service/src/: main.py
app/: config.py  database.py  init_db.py  main.py  models.py
app/routes/: debug_db.py  ocr.py  search.py  ui.py  upload.py
app/templates/: index.html  progress.html  results.html  search.html
app/utils/: storage.py
appewfwejkfwe/routes/: extract.py  ocr.py
cortana-api-service/: Dockerfile  pyproject.toml
cortana-api-service/app/: config.py  database.py  database_setup.py  main.py  models.py
cortana-api-service/app/routes/: upload.py
cortana-api-service/app/utils/: db_integrity.py  db_selfheal.py  queue.py  s3.py  storage.py
cortana-deepseek-ocr/: Dockerfile  pyproject.toml
cortana-deepseek-ocr/app/: main.py  ocr.py
cortana-greyscale-service/: Dockerfile  pyproject.toml
cortana-greyscale-service/app/: config.py  database.py  main.py  models.py  worker.py
cortana-greyscale-service/app/utils/: pubsub_utils.py  s3_utils.py
cortana-next-service/: Dockerfile  middleware.ts  next.config.ts
cortana-next-service/app/: page.tsx
cortana-next-service/app/api/auth/login/: route.ts
cortana-next-service/app/api/auth/logout/: route.ts
cortana-next-service/app/login/: page.tsx
cortana-next-service/app/search/: page.tsx
cortana-next-service/app/video/[id]/: loading.tsx  page.tsx
cortana-next-service/hooks/: useAuth.ts  useSearchApi.ts
cortana-next-service/lib/: auth.ts  env.ts  http.ts  searchApi.ts
cortana-ocr-service/: Dockerfile  pyproject.toml
cortana-ocr-service/app/: config.py  database.py  main.py  models.py  worker.py
cortana-ocr-service/app/utils/: db_integrity.py  s3_utils.py
cortana-sampler-service/: Dockerfile  README.md  pyproject.toml
cortana-sampler-service/app/: config.py  database.py  main.py  models.py  worker.py
cortana-sampler-service/app/utils/: s3_utils.py
cortana-search-service/: Dockerfile  pyproject.toml
cortana-search-service/app/: config.py  database.py  database_setup.py  main.py  models.py
cortana-search-service/app/routes/: api.py  dashboard.py  search.py
cortana-search-service/app/services/: data_service.py
cortana-search-service/app/static/: style.css
cortana-search-service/app/templates/: base.html  dashboard.html  search.html  video_detail.html
cortana-search-service/app/utils/: indexer.py  s3_utils.py
cortana_common/: README.md  pyproject.toml
cortana_common/src/cortana_common/: __init__.py  config.py  db.py  jobs.py  models.py  s3.py
cortana_common/tests/: __init__.py  test_config.py  test_jobs.py  test_models.py
docs/: database-design.md  jobs.md  kubernetes-deployment.md  s3-bucket.md
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/tests/: test_smoke.py
services/clip-service/: Dockerfile  pyproject.toml
services/ocr-worker/: Dockerfile  pyproject.toml
services/s3-cron-scanner/: Dockerfile  pyproject.toml
services/sampler-worker/: Dockerfile  pyproject.toml
services/segment-index-worker/: Dockerfile  pyproject.toml
services/transcode-worker/: Dockerfile  pyproject.toml
supabase/: config.toml
supabase/migrations/: 20251113133909_init_core_schema.sql
