[project]
name = "snapshot-sandbox"
version = "0.1.0"
description = "FastAPI video scene detection and OCR pipeline"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.118.0",
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.12.0.88",
    "pydantic-settings>=2.11.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]

[tool.uv]
dev-dependencies = []

