[project]
name = "cortana-deepseek-ocr"
version = "0.1.0"
description = "DeepSeek OCR inference microservice (CPU-only)"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "transformers==4.46.3",
  "torch==2.4.0",  # ✅ works on CPU-only
  "huggingface-hub",
  "tokenizers==0.20.3",
  "einops",
  "addict",
  "easydict",
  "safetensors",
  "pillow",
  "pdf2image",
  "vllm==0.6.3.post1",
  "numpy<2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
