[project]
name = "cortana-ocr-worker"
version = "0.1.0"
description = "Tesseract OCR processing worker for cortana-vision"
requires-python = ">=3.12"
dependencies = [
    "cortana-common",
]

[tool.uv.sources]
cortana-common = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortana_ocr_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
